# selfdata

./: .dockerignore  .gitattributes  .gitignore  .sqlfluff  .sqlfluffignore  Dockerfile  README.md  dag.yml  logging.yaml  meltano.pubkey  meltano.yml  requirements.txt  secrets.yml  yoyo.ini
migrations/: 20220612_01_3qiZB.py  20220612_02_ewdWO-postrun.py  20220919_01_0eLFA-setup.py
notebook/: package.json
notebook/pages/: chess.md  music.md
orchestrate/: .gitignore  README.md  dagster-logging.yml  dagster.yaml  meltano.py  pyproject.toml  setup.cfg  setup.py  tox.ini  workspace.yaml
orchestrate/.telemetry/: id.yaml
orchestrate/my_meltano_project/: __init__.py  dagster_s3.py  repository.py
orchestrate/my_meltano_project/assets/: athena.py  dbt.py  evidence.py  hello_world.py  meltano.py  sqlite.py
orchestrate/my_meltano_project/services/: athena.py  meltano.py  s3.py
orchestrate/my_meltano_project_tests/: test_athena.py  test_meltano.py  test_s3.py
orchestrate/orchestrate/: __init__.py  repository.py
orchestrate/orchestrate/jobs/: say_hello.py
orchestrate/orchestrate/schedules/: my_hourly_schedule.py
orchestrate/orchestrate/sensors/: my_sensor.py
orchestrate/tests/test_graphs/: test_say_hello.py
orchestrate/tests/test_ops/: test_hello.py
transform/: dbt_project.yml
transform/data/: lastfm_user_timezones.csv
transform/macros/: partitions.sql  time.sql
transform/models/lastfm/: lastfm_users.sql  listening_clock.sql  listens_per_month.sql  metrics.yml  models.yml  scrobbles.sql  sources.yml
visualize/: package-lock.json
(+8 files in other folders)
